fixing form alignments and sizing

--- a/ckanext/eudm_theme/public/eudm.css
+++ b/ckanext/eudm_theme/public/eudm.css
@@ -363,3 +363,17 @@ footer {
 .dataset-resource-form .stages {
    margin: -40px -25px 20px;
 } 
+
+.control-full input, .control-full select, .control-full textarea {
+   width: 500px;
+}
+.editor .editor-info-block {
+   margin-left:  125px;
+   width: 498px;
+   padding-right: 0px;
+   padding-left: 0px;
+}
+
+.slug-preview {
+   margin-left: 250px;
+}
